--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8000
-MONGODB_URL=mongodb+srv://supratick:<sonu123>@personal-codebase.msv64di.mongodb.net
+MONGODB_URL='mongodb+srv://sonumondal5006:sonu@cluster0.fuwi1x9.mongodb.net'
